# RT-AI-IDS

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  LICENSE  Makefile  README.md  application.py  docker-compose.yml  pyproject.toml  requirements.txt  temp_structure.txt
.github/workflows/: ci.yml
docs/: DEMO_SCRIPT.md  FLUTTER_DEVELOPER_GUIDE.md  api.md  architecture.md  bandit-report.json  live-demo-setup.md  observability.md  openapi.yaml  operations.md  threat-model.md
docs/qa/: security-and-readiness.md
flow/: Flow.py
infra/docker/: api.Dockerfile  flow_builder.Dockerfile  inference.Dockerfile  ingestion.Dockerfile  nginx.Dockerfile
infra/nginx/: default.conf  entrypoint.sh
models/: README.md  manifest.sha256.json
requirements/: api.txt  flow_builder.txt  inference.txt  ingestion.txt
scripts/: concurrent_predict.py
services/: __init__.py
services/api/: app.py  audit.py  cli.py  deps.py  error_handlers.py  extensions.py  jwt_denylist.py  middleware.py  models.py  responses.py  retention.py  sse_nonce.py
services/flow_builder/: __init__.py  service.py  worker.py
services/inference/: __init__.py  model_loader.py  model_service.py  repository.py  service.py  wireless_rules.py  worker.py  xai.py
services/ingestion/: publisher.py  run_sniffer.py  sniffer.py
shared/: __init__.py  logging_utils.py
shared/broker/: __init__.py  base.py  pubsub.py  redis_streams.py  retry.py
shared/config/: __init__.py  settings.py
shared/db/: __init__.py  engine.py  models.py
tests/: conftest.py
(+56 files in other folders)
