[project]
name = "rt-ai-ids"
version = "0.2.0"
description = "Real-time AI Intrusion Detection System (microservices)"
requires-python = ">=3.11"

[tool.ruff]
line-length = 110
target-version = "py311"
extend-exclude = [
    "flow",                # legacy upstream module, kept as-is
    "models",
    "shared/db/migrations/versions",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "PL", "RUF"]
ignore = [
    "PLR0913",  # too many args (Flask routes & schemas legitimately need many fields)
    "PLR2004",  # magic numbers — risk thresholds are tabulated
    "B008",     # function calls in defaults (Depends-style helpers acceptable)
    "PLW0603",  # globals — used intentionally for process-cached singletons
    "PLW0602",
    "PLW2901",  # for-var reassignment — used in JSON formatter loop
    "RUF100",   # unused noqa — kept conservative across optional-dep guards
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "S101"]
"shared/db/migrations/env.py" = ["E402"]

[tool.black]
line-length = 110
target-version = ["py311"]
extend-exclude = '''
/(
  flow
  | shared/db/migrations/versions
)/
'''

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = [
    "flow/",
    "shared/db/migrations/versions/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
filterwarnings = [
    "ignore::DeprecationWarning",
]
